fix full screen on mobile

--- a/src/AppBundle/Resources/public/prayer-times/css/desktop.css
+++ b/src/AppBundle/Resources/public/prayer-times/css/desktop.css
@@ -3,6 +3,7 @@ body {
     height: 100vh;
     position: relative;
     background-size: cover;
+    background-color: #000000;
 }
 
 #spinner {
