--- a/src/AppBundle/Resources/public/prayer-times/css/mobile.css
+++ b/src/AppBundle/Resources/public/prayer-times/css/mobile.css
@@ -2,6 +2,8 @@ body {
     padding: 10px 5px;
     line-height: 1.2;
     position: relative;
+    background-color: #000000;
+    height: 100vh;
 }
 
 #full-screen {
